[package]
name = "sorted-list"
version = "0.2.0"
authors = ["Joonas Koivunen <joonas.koivunen@gmail.com>"]
repository = "https://github.com/koivunej/sorted-list"
description = "Simple SortedList data structure which allows mapping an Ord key to multiple distinct PartialEq values"
license = "MIT"

[features]
default = []
nightly = []

[dependencies]
